--- a/homepages/main.template
+++ b/homepages/main.template
@@ -1,6 +1,1 @@
-<div id="cfct-build-3971" class="cfct-build">
-  <div class="cfct-row cfct-row-a-b-c">
-$heros  
-  </div>
-$calloutrows
-</div>
+<div id="cfct-build-3971" class="cfct-build"><div class="cfct-row cfct-row-a-b-c">$heros</div>$calloutrows</div>
